netgauze-serde-macros/tests/trybuild/06-from-nom-multiple.stderr
error[E0119]: conflicting implementations of trait `nom::error::ParseError<netgauze_locate::BinarySpan<&[u8]>>` for type `LocatedTestError<'_>`
  --> tests/trybuild/06-from-nom-multiple.rs:14:10
   |
14 | #[derive(LocatedError, Eq, PartialEq, Debug, Clone)]
   |          ^^^^^^^^^^^^
   |          |
   |          first implementation here
   |          conflicting implementation for `LocatedTestError<'_>`
   |
   = note: this error originates in the derive macro `LocatedError` (in Nightly builds, run with -Z macro-backtrace for more info)
